--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-body{
+body {
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
 }
 
-.header{
+.header {
     display: flex;
     justify-content: center;
     background: #1F2937;
@@ -13,52 +13,59 @@ body{
     padding: 0 0 30px 0;
 }
 
-.header-content{
+.header-title {
+    font-size: 24px;
+}
+
+.header-content {
     display: flex;
     flex-direction: column;
 }
 
-.h-content-top{
+.h-content-top {
     display: flex;
     justify-content: space-between;
 }
 
-.h-content-top ul{
+.h-content-top ul {
     padding: 0;
     list-style: none;
     display: flex;
     gap: 10px;
 }
 
-.h-content-bottom{
+.h-content-bottom {
     display: flex;
     justify-content: space-between;
-    gap: 150px;
+    margin-top: 25px;
+    height: 250px
 }
 
-.h-content-bottom > div{
+.h-content-bottom>div {
     flex: 1;
 }
 
-.image-placeholder{
+.image-placeholder {
     display: flex;
     justify-content: center;
     align-items: center;
     background: grey;
-    width: 500px;
+    width: 590px;
 }
 
-.header-subtext{
+.header-subtext {
     width: 300px;
-    padding-right: 50px;
+    padding-right: 150px;
+    box-sizing: border-box;
     font-size: 18px;
 }
-.header-subtext .h1{
+
+.header-subtext .h1 {
     font-size: 48px;
     font-weight: bold;
 }
 
-.sign-up-btn{
+.sign-up-btn {
     background: #3882F6;
     color: #F9FAF8;
     font-size: 15px;
@@ -68,7 +75,46 @@ body{
     height: 30px;
 }
 
-a{
+a {
     text-decoration: none;
     color: #F9FAF8;
+}
+
+
+.info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.info-title {
+    margin: 40px auto;
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.info-divs {
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+}
+
+.info-subtext {
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    text-align: center;
+    align-items: center;
+}
+
+.info-subtext-text {
+    padding: 0 5px;
+}
+
+.info-subtext-div {
+    border: 2px solid #3882F6;
+    border-radius: 10px;
+    width: 150px;
+    height: 150px;
 }
